# rsgit

./: .gitattributes  Cargo.toml  README.md
src/: errors.rs  main.rs  object.rs  utils.rs
src/cmd/: cat_file.rs  hash_object.rs  init.rs
