[package]
name = "rsgit"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

# Optional metadata
authors = ["Abhra Basak <abhra@outlook.in>"]
description = "Rust implementation of git commands"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/abhrabasak/rsgit"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
flate2 = "1.1.0"
